<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_back"
            app:title="@string/preview_title" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/totalTransactionsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_medium"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold"
            tools:text="@string/total_transactions" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/transactionsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:listitem="@layout/item_transaction" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/lockedCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_medium"
            android:visibility="gone"
            app:cardBackgroundColor="?attr/colorErrorContainer"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardElevation="@dimen/card_elevation"
            tools:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_medium">

                <TextView
                    android:id="@+id/lockedText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/padding_small"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_size_medium"
                    tools:text="@string/preview_locked" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/unlockButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/unlock_full_data"
                    app:icon="@drawable/ic_premium"
                    app:iconGravity="textStart" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/exportButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_medium"
            android:text="@string/export_data"
            app:icon="@drawable/ic_export"
            app:iconGravity="textStart" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
