<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/home_title"
            app:menu="@menu/menu_home" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_medium">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/premiumBadgeCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_medium"
                android:visibility="gone"
                app:cardBackgroundColor="@color/premium_gold"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:cardElevation="@dimen/card_elevation"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="@dimen/padding_small">

                    <ImageView
                        android:layout_width="@dimen/icon_size_small"
                        android:layout_height="@dimen/icon_size_small"
                        android:contentDescription="@string/premium_unlocked"
                        android:src="@drawable/ic_premium"
                        app:tint="@android:color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/padding_small"
                        android:text="@string/premium_unlocked"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_medium"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:cardElevation="@dimen/card_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_medium">

                    <ImageView
                        android:layout_width="@dimen/icon_size_large"
                        android:layout_height="@dimen/icon_size_large"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="@dimen/padding_medium"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_pdf_excel" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/padding_small"
                        android:text="@string/home_description"
                        android:textAlignment="center"
                        android:textSize="@dimen/text_size_body" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:cardElevation="@dimen/card_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_medium">

                    <TextView
                        android:id="@+id/selectedFileText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/padding_medium"
                        android:text="@string/no_file_selected"
                        android:textAlignment="center"
                        android:textSize="@dimen/text_size_medium" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/selectPdfButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/padding_small"
                        android:text="@string/select_pdf"
                        app:icon="@drawable/ic_file"
                        app:iconGravity="textStart" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/convertButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:text="@string/convert_pdf"
                        app:icon="@drawable/ic_convert"
                        app:iconGravity="textStart" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/padding_medium"
                android:visibility="gone" />

            <TextView
                android:id="@+id/progressText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_small"
                android:textAlignment="center"
                android:textSize="@dimen/text_size_medium"
                android:visibility="gone"
                tools:text="@string/processing_pdf" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
